# 26-aspire-hackathon-team-helio

./: .gitignore  README.md  api-contract.json  scafold.py
BackEnd/: README.md  app.py
DataEngineering/: README.md  main.py
DataScience/: Procfile  README.md  main.ipynb  pyproject.toml  requirements.txt
DataScience/app/: __init__.py  agents.py  logging_utils.py  main.py  models.py  orchestrator.py
DataScience/app/tools/: __init__.py  bodhi_search.py
FrontEnd/: README.md  components.json  index.html  middleware.js  mockApiResponses.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
FrontEnd/api/match/: route.js
FrontEnd/app/: layout.js  middleware.js  page.js
FrontEnd/app/api/generate-job-description/: route.ts
FrontEnd/app/api/match/: route.js
FrontEnd/app/api/recommend/: route.ts
FrontEnd/app/components/: Chat.js  DesktopOnly.js  Footer.js  Header.js  MatchCard.js  TalentCard.js  WhyMatchModal.js
FrontEnd/app/contexts/: AuthContext.js
FrontEnd/app/data/: consultants.js  mockDropDownOptions.js  mockTalents.js
FrontEnd/app/lib/: similarity.js
FrontEnd/app/login/: page.js
FrontEnd/app/matches/: page.js
FrontEnd/app/quiz/: page.js
FrontEnd/app/signup/: page.js
FrontEnd/services/: api-services.js  talentService.js
FrontEnd/src/components/ui/: tabs.tsx
FrontEnd/styles/: global.css
